--- a/index.html
+++ b/index.html
@@ -271,5 +271,9 @@
             // left()
         })()
     </script>
+    <script src="https://cdn.jsdelivr.net/gh/AyagawaSeirin/Blog@gh-pages/live2dw/lib/L2Dwidget.min.js"></script>
+    <script>
+       L2Dwidget.init({ pluginRootPath: "https://cdn.jsdelivr.net/gh/AyagawaSeirin/Blog@gh-pages/live2dw/", pluginJsPath: "lib/", pluginModelPath: "22/", model: { jsonPath: "https://cdn.jsdelivr.net/gh/AyagawaSeirin/Blog@gh-pages/live2dw/22/model.json" }, display: { superSample: 2, width: 220, height: 330, position: "right", hOffset: 0, vOffset: -20 }, log: !1, tagMode: !1 })
+    </script>
 </body>
 </html>
